# car-model-classification

./: .gitignore  main.py  main.tf  pyproject.toml  variables.tf
src/: transformator.py
